<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_main"
    android:background="#000000"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ContactActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#000000" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:textAlignment="center"
            android:text="@string/contact_text1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textAlignment="center"
            android:text="@string/contact_hours"
            android:textSize="16sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:text="@string/contact_text2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textAlignment="center"
            android:text="@string/contact_addr"
            android:textSize="16sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textAlignment="center"
            android:text="@string/contact_desc"
            android:textSize="16sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/contact_name"
            android:textSize="16sp"
            android:textColor="#FFFFFF" />


        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="5dp"
            android:inputType="text"
            android:singleLine="true"
            android:background="#FFFFFF"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/contact_email"
            android:textSize="16sp"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:background="#FFFFFF"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/contact_subject"
            android:textSize="16sp"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/subject_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="5dp"
            android:inputType="text"
            android:singleLine="true"
            android:background="#FFFFFF"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/contact_message"
            android:textSize="16sp"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/message_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="205dp"
            android:inputType="textMultiLine"
            android:background="#FFFFFF"
            android:textSize="16sp"/>

        <Button
            style="@style/StandardButton"
            android:text="@string/contact_send"
            android:onClick="openMessagePage"/>

    </LinearLayout>


</ScrollView>