<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".MessageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp"
        android:textAlignment="center"
        android:text="@string/contact_thanks"
        android:textSize="24sp"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:textAlignment="center"
        android:text="@string/contact_received"
        android:textSize="16sp"
        android:textColor="#FFFFFF" />

    <Button
        style="@style/StandardButton"
        android:text="@string/contact_home"
        android:onClick="openMainPage"/>

</LinearLayout>