<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/main_heading"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:paddingTop="10dp"
            android:paddingBottom="14dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:fontFamily="sans-serif-medium"
            android:background="#000000" />

        <ImageView
            android:id="@+id/avengers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-120dp"
            android:layout_marginBottom="-130dp"
            android:src="@drawable/avengers" />

        <Button
            android:id="@+id/btn_movie1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie_1"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:shadowColor="#000000"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:background="#000FFF"
            android:fontFamily="sans-serif" />

        <ImageView
            android:id="@+id/pikachu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-100dp"
            android:layout_marginBottom="-130dp"
            android:src="@drawable/pikachu" />

        <Button
            android:id="@+id/btn_movie2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie_2"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:shadowColor="#000000"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:background="#000FFF"
            android:fontFamily="sans-serif" />

        <ImageView
            android:id="@+id/aladdin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-230dp"
            android:layout_marginBottom="-260dp"
            android:src="@drawable/aladdin" />

        <Button
            android:id="@+id/btn_movie3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie_3"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:shadowColor="#000000"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:background="#000FFF"
            android:fontFamily="sans-serif" />

        <ImageView
            android:id="@+id/dumbo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-230dp"
            android:layout_marginBottom="-260dp"
            android:src="@drawable/dumbo" />

        <Button
            android:id="@+id/btn_movie4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie_4"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:shadowColor="#000000"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:background="#000FFF"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/btn_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ticket_prices"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:paddingTop="28dp"
            android:paddingBottom="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contact_us"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:paddingTop="10dp"
            android:paddingBottom="24dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:fontFamily="sans-serif" />


    </LinearLayout>
</ScrollView>